Thu May 03 00:05:23 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* backends/flint/: Remove unused (and unimplemented) declarations
	  of begin_transaction_(), commit_transaction_() and
	  cancel_transaction_() from FlintWritableDatabase class.  Tidy up
	  handling of metainfo (total_length and lastdocid) to avoid
	  repeatedly parsing the special record, and make it easier to
	  store additional metainfo in future.
	  Also, remove code which ensures that there is always a special
	  record - this was added in revision 5459 when the special record
	  was stored in the record table, so that the number of documents
	  in the database could always be calculated by subtracting 1 from
	  the number of entries in the record table.  Now that the special
	  record is stored in the postlist table, this is no longer
	  necessary.

Wed May 02 17:56:39 BST 2007  Olly Betts <olly@survex.com>

	* backends/dbfactory_remote.cc,include/xapian/dbfactory.h:
	  Remote::open_writable() now defaults to no (active) timeout.  The
	  connection timeouts for Remote::open() and Remote::open_writable()
	  now default to 10 seconds rather than defaulting to the same as
	  the active timeout (which defaults to 10 seconds).

Wed May 02 16:00:22 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* common/safeunistd.h,tests/harness/backendmanager.cc: Fix
	  compilation on windows - safeunistd.h was undefining ssize_t
	  and thus overriding the definition in config.h, and include
	  safewindows.h for backendmanager.cc

Wed May 02 15:34:33 BST 2007  Olly Betts <olly@survex.com>

	* common/safeunistd.h: Don't define ssize_t here for MSVC - do it in
	  config.h instead.  This avoids pulling in <windows.h> which will
	  hopefully fix another macro redefinition warning under MSVC.

Wed May 02 15:20:56 BST 2007  Olly Betts <olly@survex.com>

	* common/safewindows.h: Define NOGDI before including windows.h to
	  prevent it from defining a macro called "ERROR" which collides with