@@ -1,3 +1,7 @@
+Thu May 03 02:31:33 BST 2007  Olly Betts <olly@survex.com>
+
+	* include/xapian/unicode.h: Fix wrapping of comment.
+
 Thu May 03 00:05:23 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* backends/flint/: Remove unused (and unimplemented) declarations
